--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,21 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.json-simple-1.1.1.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=C:\\desarrollo\\apache-tomcat\\json-simple-1.1.1.jar
 file.reference.ooxml-schemas-1.1.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\ooxml-lib\\ooxml-schemas-1.1.jar
+file.reference.ooxml-schemas-1.1.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\ooxml-lib\\ooxml-schemas-1.1.jar
 file.reference.poi-3.13-20150929.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\poi-3.13-20150929.jar
+file.reference.poi-3.13-20150929.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\poi-3.13-20150929.jar
 file.reference.poi-excelant-3.13-20150929.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\poi-excelant-3.13-20150929.jar
+file.reference.poi-excelant-3.13-20150929.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\poi-excelant-3.13-20150929.jar
 file.reference.poi-ooxml-3.13-20150929.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\poi-ooxml-3.13-20150929.jar
+file.reference.poi-ooxml-3.13-20150929.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\poi-ooxml-3.13-20150929.jar
 file.reference.poi-ooxml-schemas-3.13-20150929.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\poi-ooxml-schemas-3.13-20150929.jar
+file.reference.poi-ooxml-schemas-3.13-20150929.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\poi-ooxml-schemas-3.13-20150929.jar
 file.reference.poi-scratchpad-3.13-20150929.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\poi-scratchpad-3.13-20150929.jar
+file.reference.poi-scratchpad-3.13-20150929.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\poi-scratchpad-3.13-20150929.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\admCIDER\\Desktop\\HerramientaWeb_CIDER\\Librerias\\poi-3.13\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\laptop\\Dropbox\\Proyectos\\Uniandes\\poi-3.13\\ooxml-lib\\xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -63,15 +71,23 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar}:\
     ${file.reference.poi-scratchpad-3.13-20150929.jar}:\
     ${file.reference.ooxml-schemas-1.1.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.ooxml-schemas-1.1.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.poi-3.13-20150929.jar-1}:\
+    ${file.reference.poi-excelant-3.13-20150929.jar-1}:\
+    ${file.reference.poi-ooxml-3.13-20150929.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
+    ${file.reference.poi-scratchpad-3.13-20150929.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
